Fixing column spacing in not the prettiest way instead of rewriting the whole menu thing :/

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -207,6 +207,9 @@ header {
                             &:nth-child(6n) {
                                 margin-left: 800px;
                             }
+                            &:nth-child(7n) {
+                                margin-left: 1000px;
+                            }
                         }
                     }
                     i {
